[package]
name = "rinha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.185"
serde_derive = "1.0.185"
serde_json = "1.0.85"
actix-web = "4"
uuid = { version = "1.4.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",             # Enable serde parsing
] }
fixedstr = {version="0.4.3", features=["serde"]}
actix-web-validator = "5.0.1"
validator = { version = "0.16", features = ["derive"] }
